# src/db/models/contacts.js
@@ -19,16 +19,6 @@ const contactsSchema = new Schema(
       ref: 'users',
       required: true,
     },
-    isFavourite: {
-      type: Boolean,
-      default: false,
-    },
-    contactType: {
-      type: String,
-      enum: ['work', 'home', 'personal'],
-      required: true,
-      default: 'personal',
-    },
     photo: {
       type: String,
     },
@@ -38,5 +28,6 @@ const contactsSchema = new Schema(
     versionKey: false,
   },
 );
+
 
 export const ContactsCollection = model('contacts', contactsSchema);
