# src/validation/contacts.js
@@ -1,4 +1,3 @@
-//src/validation/contacts.js
 import Joi from 'joi';
 
 // Схема для створення контакту
@@ -6,10 +5,6 @@ export const createContactSchema = Joi.object({
   name: Joi.string().min(3).max(20).required(),
   phoneNumber: Joi.string().min(3).max(20).required(),
   email: Joi.string().email(),
-  isFavourite: Joi.boolean(),
-  contactType: Joi.string()
-    .valid('work', 'home', 'personal')
-    .default('personal'),
   photo: Joi.any(),
 });
 
@@ -18,7 +13,5 @@ export const updateContactSchema = Joi.object({
   name: Joi.string().min(3).max(20),
   phoneNumber: Joi.string().min(3).max(20),
   email: Joi.string().email(),
-  isFavourite: Joi.boolean(),
-  contactType: Joi.string().valid('work', 'home', 'personal'),
   photo: Joi.any(),
-}).or('name', 'phoneNumber', 'email', 'isFavorite', 'contactType'); // Вимагає хоча б одне поле
+}).or('name', 'phoneNumber', 'email'); // Вимагає хоча б одне поле
